ui gradle fix